--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,14 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
+.idea/workspace.xml
+.idea/vcs.xml
 .idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/uiDesigner.xml
+.idea/jarRepositories.xml
+.idea/modules.xml
 .idea/libraries/
 *.iws
 *.iml
